nats-server.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: nats-server
    meta.helm.sh/release-namespace: bb
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  creationTimestamp: "2022-04-11T10:55:53Z"
  labels:
    app.kubernetes.io/instance: nats-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.7.4
    helm.sh/chart: nats-0.15.1
  name: nats-server
  namespace: bb
  resourceVersion: "161200782"
  uid: c3d1bacb-d732-486e-88a2-9b3c203cd119
spec:
  clusterIP: None
  clusterIPs:
  - None
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: client
    port: 4222
    protocol: TCP
    targetPort: 4222
  - name: cluster
    port: 6222
    protocol: TCP
    targetPort: 6222
  - name: monitor
    port: 8222
    protocol: TCP
    targetPort: 8222
  - name: metrics
    port: 7777
    protocol: TCP
    targetPort: 7777
  - name: leafnodes
    port: 7422
    protocol: TCP
    targetPort: 7422
  - name: gateways
    port: 7522
    protocol: TCP
    targetPort: 7522
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/instance: nats-server
    app.kubernetes.io/name: nats
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
