nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: bytebuilders
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/issuer":"bytebuilders","kubernetes.io/ingress.class":"nginx"},"creationTimestamp":"2021-05-25T05:09:35Z","generation":4,"labels":{"app.kubernetes.io/instance":"bytebuilders","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"bytebuilders","helm.sh/chart":"bytebuilders-0.1.0"},"name":"nginx-ingress","namespace":"bb","resourceVersion":"154821486","uid":"58bc54e8-2cbb-4cb4-ae3a-ad19a [...]
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2021-05-25T05:09:35Z"
  generation: 7
  labels:
    app.kubernetes.io/instance: bytebuilders
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: bytebuilders
    helm.sh/chart: bytebuilders-0.1.0
  name: nginx-ingress
  namespace: bb
  resourceVersion: "161076500"
  uid: 58bc54e8-2cbb-4cb4-ae3a-ad19a02e7210
spec:
  rules:
  - host: appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: grafana.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: prometheus.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-prom-proxy
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: console.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-cluster-ui
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: kubedb.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-kubedb-ui
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: deploy.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-deploy-ui
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: marketplace.appscode.ninja
    http:
      paths:
      - backend:
          service:
            name: bytebuilders-marketplace-ui
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - appscode.ninja
    - nats.appscode.ninja
    - grafana.appscode.ninja
    - prometheus.appscode.ninja
    - console.appscode.ninja
    - kubedb.appscode.ninja
    - deploy.appscode.ninja
    - marketplace.appscode.ninja
    secretName: bytebuilders-cert
status:
  loadBalancer:
    ingress:
    - hostname: nb-96-126-119-83.dallas.nodebalancer.linode.com
      ip: 96.126.119.83
